[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actor-logger"
version = "0.1.0"
description = "Structured event logging for Apify actors"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.0",
    "apify-client>=1.6.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "aioresponses"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
